refactor: add background image, add events json,

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
     "baseUrl": ".",
     "paths": {
       "@/components/*": ["pages/components/*"],
+      "@/config/*": ["pages/config/*"],
       "@/constants/*": ["pages/constants/*"],
       "@/styles/*": ["styles/*"]
     }
