--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "react-toastify": "^9.1.1",
+    "slugify": "^1.6.5",
     "typescript": "4.9.4"
   }
 }
